info added for markup in Home

--- a/index.html
+++ b/index.html
@@ -66,8 +66,32 @@
       </div>
 
     </section>
+    <section class="services">
+      <h2>Services we offer</h2>
+      <!-- ADD THREE CARDS WITH IMAGES AND DESC -->
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </section>
+    <section class="about">
+      <h2>About Us</h2>
+      <p>Write a para describing the experience and services of ATT</p>
+      <!-- Optional Testimonaial Cards-->
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </section>
+    <section class="cars">
+      <!-- Slider with Car image , name, seater info use slick -->
+    </section>
   </main>
-  <footer></footer>
+  <footer>
+    <!-- Links and logo like CE - left and right - bg for footer #F3F7EC-->
+  </footer>
 
   <script src="./assets/js/index.js"></script>
 </body>
