fix: cosmetic change

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container">
           <div class="left-wrap">
             <h1 class="title">
-              Alphy Tours and Travels - Your Reliable Partner for Seamless Car Journeys</h1>
+              Your Reliable Partner for Seamless Car Journeys</h1>
             <p class="desc">
               Your trusted travel companion for every trip! We provide a wide range of car services, affordable rates,
               exceptional customer support, and a user-friendly booking system. Experience the joy of hassle-free travel
