lazy load images

--- a/index.html
+++ b/index.html
@@ -407,27 +407,27 @@
           <div class="my-slider">
             <div class="slide">
               <h3 class="title">Name of Demo Car 1</h3>
-              <div class="img-wrap"><img src="./assets/images/demo-car.jpg" alt="Demo Car"></div>
+              <div class="img-wrap"><img loading="lazy" src="./assets/images/demo-car.jpg" alt="Demo Car"></div>
             </div>
             <div class="slide">
               <h3 class="title">Name of Demo Car 2</h3>
-              <div class="img-wrap"><img src="./assets/images/demo-car.jpg" alt="Demo Car"></div>
+              <div class="img-wrap"><img loading="lazy" src="./assets/images/demo-car.jpg" alt="Demo Car"></div>
             </div>
             <div class="slide">
               <h3 class="title">Name of Demo Car 3</h3>
-              <div class="img-wrap"><img src="./assets/images/demo-car.jpg" alt="Demo Car"></div>
+              <div class="img-wrap"><img loading="lazy" src="./assets/images/demo-car.jpg" alt="Demo Car"></div>
             </div>
             <div class="slide">
               <h3 class="title">Name of Demo Car 4</h3>
-              <div class="img-wrap"><img src="./assets/images/demo-car.jpg" alt="Demo Car"></div>
+              <div class="img-wrap"><img loading="lazy" src="./assets/images/demo-car.jpg" alt="Demo Car"></div>
             </div>
             <div class="slide">
               <h3 class="title">Name of Demo Car 5</h3>
-              <div class="img-wrap"><img src="./assets/images/demo-car.jpg" alt="Demo Car"></div>
+              <div class="img-wrap"><img loading="lazy" src="./assets/images/demo-car.jpg" alt="Demo Car"></div>
             </div>
             <div class="slide">
               <h3 class="title">Name of Demo Car 6</h3>
-              <div class="img-wrap"><img src="./assets/images/demo-car.jpg" alt="Demo Car"></div>
+              <div class="img-wrap"><img loading="lazy" src="./assets/images/demo-car.jpg" alt="Demo Car"></div>
             </div>
           </div>
         </div>
@@ -438,7 +438,7 @@
         <div class="container">
           <div class="content-wrap">
             <div class="left-wrap">
-              <img src="./assets/images/about.jpg" alt="About ATT">
+              <img loading="lazy" src="./assets/images/about.jpg" alt="About ATT">
             </div>
             <div class="right-wrap">
               <h3 class="title">This below para describes about att</h3>
@@ -458,7 +458,7 @@
     <div class="container">
       <div class="left-wrap">
         <div class="img-wrap">
-          <img src="./assets/images/alphy_logo.png" alt="Aphy tours and Travels Logo">
+          <img loading="lazy" src="./assets/images/alphy_logo.png" alt="Aphy tours and Travels Logo">
         </div>
       </div>
       <div class="right-wrap">
