section cars animation

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
           <h2 class="heading" data-aos="fade-in" data-aos-once="true">These are our Available cars</h2>
           <p class="sub-heading" data-aos="fade-in" data-aos-once="true">A text saying that there are more cars
             available than shown below etc...</p>
-          <div id="controls">
+          <div id="controls" data-aos-once="true" data-aos="fade-in">
             <button id="prev" class="slider-control previous">
               <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
                 <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="48"
@@ -407,7 +407,7 @@
                   d="M184 112l144 144-144 144" />
               </svg></button>
           </div>
-          <div class="my-slider">
+          <div class="my-slider" data-aos-once="true" data-aos="fade-in">
             <div class="slide">
               <h3 class="title">Name of Demo Car 1</h3>
               <div class="img-wrap"><img loading="lazy" src="./assets/images/demo-car.jpg" alt="Demo Car"></div>
