--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <p class="sub-heading" data-aos-once="true" data-aos="fade-up">Lorem ipsum dolor sit, amet consectetur
             adipisicing elit.</p>
           <ul class="list-wrap">
-            <div class="list-item" data-aos="zoom-in" data-aos-once="true">
+            <div class="list-item" data-aos="fade-right" data-aos-once="true">
               <div class="icon-wrap">
                 <svg width="64" height="56" viewBox="0 0 64 56" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -146,7 +146,7 @@
                 </p>
               </div>
             </div>
-            <div class="list-item" data-aos="zoom-in" data-aos-once="true">
+            <div class="list-item" data-aos="fade-right" data-aos-once="true">
               <div class="icon-wrap">
                 <svg xmlns="http://www.w3.org/2000/svg" width="85" height="65" viewBox="0 0 85 65" fill="none">
                   <g clip-path="url(#clip0_10098_8533)">
@@ -195,7 +195,7 @@
                 </p>
               </div>
             </div>
-            <div class="list-item" data-aos="zoom-in" data-aos-once="true">
+            <div class="list-item" data-aos="fade-right" data-aos-once="true">
               <div class="icon-wrap">
                 <svg width="80" height="56" viewBox="0 0 80 56" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g clip-path="url(#clip0_4599_7410)">
@@ -254,7 +254,7 @@
                   through our extensive network.</p>
               </div>
             </div>
-            <div class="list-item" data-aos="zoom-in" data-aos-once="true">
+            <div class="list-item" data-aos="fade-left" data-aos-once="true">
               <div class="icon-wrap">
                 <svg width="81" height="80" viewBox="0 0 81 80" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g clip-path="url(#clip0_4599_7425)">
@@ -298,7 +298,7 @@
                 </p>
               </div>
             </div>
-            <div class="list-item" data-aos="zoom-in" data-aos-once="true">
+            <div class="list-item" data-aos="fade-left" data-aos-once="true">
               <div class="icon-wrap">
                 <svg xmlns="http://www.w3.org/2000/svg" width="85" height="65" viewBox="0 0 85 65" fill="none">
                   <g clip-path="url(#clip0_10098_8533)">
@@ -348,7 +348,7 @@
                 </p>
               </div>
             </div>
-            <div class="list-item" data-aos="zoom-in" data-aos-once="true">
+            <div class="list-item" data-aos="fade-left" data-aos-once="true">
               <div class="icon-wrap">
                 <svg width="81" height="80" viewBox="0 0 81 80" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="40.6672" cy="40" r="30.3333" stroke="#2f7c72" stroke-width="3"></circle>
