Privacy policy page added + mob responsive

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
       </div>
       <div class="right-wrap">
         <ul>
-          <li><a href="/privacy-policy/">Privacy Policy</a></li>
+          <li><a href="/privacy-policy/index.html">Privacy Policy</a></li>
           <li><a href="mailto:example@example.com">Email : example@example.com</a></li>
           <li><a href="tel:+1234567890">Phone: +1 (234) 567-890</a></li>
         </ul>
