--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -4,11 +4,90 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Alphy tours and travels | Privacy Policy</title>
+  <link rel="icon" href="./../assets/images/favicon.ico">
+  <link rel="stylesheet" href="./../assets/css/base.css">
+  <link rel="stylesheet" href="./../assets/css/privacy.css">
 </head>
 
 <body>
-  Privacy Policy page Content
+  <div class="main-wrap">
+    <div class="container">
+      <header>
+        <nav>
+          <div class="logo-wrap">
+            <img src="./../assets/images/alphy_logo.png" alt="Logo for Alphy tours and travels">
+          </div>
+
+        </nav>
+      </header>
+    </div>
+
+    <main>
+      <div class="container">
+        <h1 class="heading">Alphy tours and travels <br /> Privacy Policy</h1>
+        <div class="para-wrap">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam et porro inventore perspiciatis, ipsum vero
+            sed temporibus possimus? Unde ipsam aspernatur, dolorem sapiente illo quos ullam reprehenderit ad ab nemo.
+          </p>
+          <p>L, dolorem sapiente illo quos ullam reprehenderit ad ab nemo.orem ipsum dolor sit amet consectetur,
+            adipisicing elit. Totam et porro inventore perspiciatis, ipsum vero sed temporibus possimus? Unde ipsam
+            aspernatur L, dolorem sapiente illo quos ullam reprehenderit ad ab nemo.orem ipsum dolor sit amet
+            consectetur,
+            adipisicing elit. Totam et porro inventore perspiciatis, ipsum vero sed temporibus possimus? Unde ipsam
+            aspernatur</p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam et porro inventore perspiciatis, ipsum vero
+            sed temporibus possimus? Unde ipsam aspernatur, dolorem sapiente illo quos ullam reprehenderit ad ab nemo.
+          </p>
+          <p>L, dolorem sapiente illo quos ullam reprehenderit ad ab nemo.orem ipsum dolor sit amet consectetur,
+            adipisicing elit. Totam et porro inventore perspiciatis, ipsum vero sed temporibus possimus? Unde ipsam
+            aspernatur L, dolorem sapiente illo quos ullam reprehenderit ad ab nemo.orem ipsum dolor sit amet
+            consectetur,
+            adipisicing elit. Totam et porro inventore perspiciatis, ipsum vero sed temporibus possimus? Unde ipsam
+            aspernatur</p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam et porro inventore perspiciatis, ipsum vero
+            sed temporibus possimus? Unde ipsam aspernatur, dolorem sapiente illo quos ullam reprehenderit ad ab nemo.
+          </p>
+        </div>
+      </div>
+    </main>
+  </div>
+  <footer>
+    <div class="container">
+      <div class="left-wrap">
+        <div class="img-wrap">
+          <img loading="lazy" src="./../assets/images/alphy_logo.png" alt="Aphy tours and Travels Logo">
+        </div>
+      </div>
+      <div class="right-wrap">
+        <ul>
+          <li><a href="/privacy-policy/">Privacy Policy</a></li>
+          <li><a href="mailto:example@example.com">Email : example@example.com</a></li>
+          <li><a href="tel:+1234567890">Phone: +1 (234) 567-890</a></li>
+        </ul>
+      </div>
+    </div>
+    <p class="copyright">Copyright © 2024 | Alphy tours and travels</p>
+  </footer>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+  <script>
+    AOS.init();
+
+    var slider = tns({
+      container: '.my-slider',
+      items: 1,
+      "edgePadding": 50,
+      gutter: 10,
+      slideBy: 'page',
+      autoplay: false,
+      "mouseDrag": true,
+      controlsContainer: "#controls",
+      nextButton: '#prev',
+      nextButton: '#next',
+    });
+
+  </script>
 </body>
 
 </html>
