--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
   <link rel="stylesheet" href="./assets/css/home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
+  <meta name="description" content="Your trusted travel companion for every trip! We provide a wide range of car services, affordable rates,
+  exceptional customer support, and a user-friendly booking system. Experience the joy of hassle-free travel
+  with Alphy Tours and Travels!">
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Alphy tours and travels" />
+  <meta property="og:description" content="Your trusted travel companion for every trip! We provide a wide range of car services, affordable rates,
+    exceptional customer support, and a user-friendly booking system. Experience the joy of hassle-free travel
+    with Alphy Tours and Travels!" />
+  <meta property="og:url" content="https://alphytoursandtravels.com/" />
+  <meta property="og:site_name" content="Alphy Tours and Travels" />
+  <meta property="og:image" content="./assets/images/alphy_logo.png" />
+  <meta property="og:image:width" content="847" />
+  <meta property="og:image:height" content="294" />
+  <meta property="og:image:type" content="image/png" />
 </head>
 
 <body>
@@ -19,7 +33,8 @@
       <header>
         <nav>
           <div class="logo-wrap">
-            <img src="./assets/images/alphy_logo.png" alt="Logo for Alphy tours and travels">
+            <a href="https://alphytoursandtravels/"><img src="./assets/images/alphy_logo.png"
+                alt="Logo for Alphy tours and travels" width="847" height="294"></a>
           </div>
 
         </nav>
@@ -76,7 +91,7 @@
                     <input type="date" id="drop-date" name="drop-date" required class="form__input">
                   </label>
                 </p>
-                <button class="submit_button" type="submit">Submit Now</button>
+                <button aria-label="Submit Now" class="submit_button" type="submit">Submit Now</button>
               </form>
             </div>
 
@@ -93,7 +108,7 @@
           <p class="sub-heading" data-aos-once="true" data-aos="fade-up">Discover why Alphy Tours and Travels is the top
             choice for car rentals:</p>
 
-          <ul class="list-wrap">
+          <div class="list-wrap">
             <div class="list-item" data-aos="fade-right" data-aos-once="true">
               <div class="icon-wrap">
                 <svg width="64" height="56" viewBox="0 0 64 56" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -377,7 +392,7 @@
               </div>
             </div>
 
-          </ul>
+          </div>
         </div>
       </section>
 
@@ -388,12 +403,12 @@
           <p class="sub-heading" data-aos="fade-in" data-aos-once="true">Our fleet includes a wide variety of cars, and
             it's not limited to what's shown below. We offer on-demand options so you can book your favorite car.</p>
           <div id="controls" data-aos-once="true" data-aos="fade-in">
-            <button id="prev" class="slider-control previous">
+            <button aria-label="Previous Button" id="prev" class="slider-control previous">
               <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
                 <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="48"
                   d="M328 112L184 256l144 144" />
               </svg></button>
-            <button id="next" class="slider-control next">
+            <button aria-label="Next Button" id="next" class="slider-control next">
               <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
                 <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="48"
                   d="M184 112l144 144-144 144" />
@@ -433,7 +448,7 @@
         <div class="container">
           <div class="content-wrap">
             <div class="left-wrap" data-aos="fade-right" data-aos-once="true">
-              <img loading="lazy" src="./assets/images/about.jpg" alt="About ATT">
+              <img loading="lazy" src="./assets/images/about.jpg" alt="About ATT" width="646" height="484">
             </div>
             <div class="right-wrap" data-aos="fade-left" data-aos-once="true">
               <h3 class="title">About Alphy Tours and Travels</h3>
@@ -453,7 +468,8 @@
     <div class="container">
       <div class="left-wrap">
         <div class="img-wrap">
-          <img loading="lazy" src="./assets/images/alphy_logo.png" alt="Aphy tours and Travels Logo">
+          <a href="https://alphytoursandtravels/"><img src="./assets/images/alphy_logo.png"
+              alt="Logo for Alphy tours and travels" width="847" height="294"></a>
         </div>
       </div>
       <div class="right-wrap">
