--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -8,6 +8,21 @@
   <link rel="icon" href="./../assets/images/favicon.ico">
   <link rel="stylesheet" href="./../assets/css/base.css">
   <link rel="stylesheet" href="./../assets/css/privacy.css">
+  <meta name="description" content="Your trusted travel companion for every trip! We provide a wide range of car services, affordable rates,
+  exceptional customer support, and a user-friendly booking system. Experience the joy of hassle-free travel
+  with Alphy Tours and Travels!">
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Alphy tours and travels" />
+  <meta property="og:description" content="Your trusted travel companion for every trip! We provide a wide range of car services, affordable rates,
+    exceptional customer support, and a user-friendly booking system. Experience the joy of hassle-free travel
+    with Alphy Tours and Travels!" />
+  <meta property="og:url" content="https://alphytoursandtravels.com/" />
+  <meta property="og:site_name" content="Alphy Tours and Travels" />
+  <meta property="og:image" content="./../assets/images/alphy_logo.png" />
+  <meta property="og:image:width" content="847" />
+  <meta property="og:image:height" content="294" />
+  <meta property="og:image:type" content="image/png" />
 </head>
 
 <body>
@@ -16,7 +31,8 @@
       <header>
         <nav>
           <div class="logo-wrap">
-            <img src="./../assets/images/alphy_logo.png" alt="Logo for Alphy tours and travels">
+            <a href="https://alphytoursandtravels/"><img src="./../assets/images/alphy_logo.png"
+                alt="Logo for Alphy tours and travels" width="847" height="294"></a>
           </div>
 
         </nav>
@@ -128,7 +144,8 @@
     <div class="container">
       <div class="left-wrap">
         <div class="img-wrap">
-          <img loading="lazy" src="./../assets/images/alphy_logo.png" alt="Aphy tours and Travels Logo">
+          <a href="https://alphytoursandtravels/"><img loading="lazy" src="./../assets/images/alphy_logo.png"
+              alt="Logo for Alphy tours and travels" width="847" height="294"></a>
         </div>
       </div>
       <div class="right-wrap">
