fix: update essential files

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <header>
         <nav>
           <div class="logo-wrap">
-            <a href="https://alphytoursandtravels/"><img src="./assets/images/alphy_logo.png"
+            <a href="https://alphytoursandtravels.com/"><img src="./assets/images/alphy_logo.png"
                 alt="Logo for Alphy tours and travels" width="847" height="294"></a>
           </div>
 
@@ -59,7 +59,7 @@
             <div class="form-bg"></div>
             <div class="form-wrap">
               <p class="title">Book Now</p>
-              <form name="contact" method="POST" netlify>
+              <form name="contact" method="POST" data-netlify="true">
                 <p class="field-block">
                   <label>
                     <span>Please enter your Name</span>
@@ -468,7 +468,7 @@
     <div class="container">
       <div class="left-wrap">
         <div class="img-wrap">
-          <a href="https://alphytoursandtravels/"><img src="./assets/images/alphy_logo.png"
+          <a href="https://alphytoursandtravels.com/"><img src="./assets/images/alphy_logo.png"
               alt="Logo for Alphy tours and travels" width="847" height="294"></a>
         </div>
       </div>
