--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -31,7 +31,7 @@
       <header>
         <nav>
           <div class="logo-wrap">
-            <a href="https://alphytoursandtravels/"><img src="./../assets/images/alphy_logo.png"
+            <a href="https://alphytoursandtravels.com/"><img src="./../assets/images/alphy_logo.png"
                 alt="Logo for Alphy tours and travels" width="847" height="294"></a>
           </div>
 
@@ -144,7 +144,7 @@
     <div class="container">
       <div class="left-wrap">
         <div class="img-wrap">
-          <a href="https://alphytoursandtravels/"><img loading="lazy" src="./../assets/images/alphy_logo.png"
+          <a href="https://alphytoursandtravels.com/"><img loading="lazy" src="./../assets/images/alphy_logo.png"
               alt="Logo for Alphy tours and travels" width="847" height="294"></a>
         </div>
       </div>
