fix: netlify attribute added

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="form-bg"></div>
             <div class="form-wrap">
               <p class="title">Book Now</p>
-              <form name="contact" method="POST" data-netlify="true">
+              <form name="contact" method="POST" netlify>
                 <p class="field-block">
                   <label>
                     <span>Please enter your Name</span>
