fix: datepicker clickability

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                 <p class="field-block">
                   <label>
                     <span>Please select Pick Date</span>
-                    <input type="date" id="pick-date" name="pick-date" required class="form__input">
+                    <input type="date" id="pick-date" name="pick-date" required class="date form__input">
                   </label>
                 </p>
                 <p class="field-block">
                   <label>
                     <span>Please select Drop Date</span>
-                    <input type="date" id="drop-date" name="drop-date" required class="form__input">
+                    <input type="date" id="drop-date" name="drop-date" required class="date form__input">
                   </label>
                 </p>
                 <button aria-label="Submit Now" class="submit_button" type="submit">Submit Now</button>
